fix light-dark mode colors

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -4,15 +4,13 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --foreground-rgb: 168, 162, 158;
+    --background-rgb: 28, 25, 23;
   }
 }
 
@@ -21,9 +19,9 @@ body {
   background: linear-gradient(
       to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
+      rgb(var(--background-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-rgb));
 }
 
 @layer utilities {
